--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev -p 9092",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.12"
+    "next": "15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "wagmi": "^2.14.1",
+    "viem": "^2.21.54",
+    "@wagmi/connectors": "^5.7.4",
+    "@tanstack/react-query": "^5.62.7"
+  },
+  "devDependencies": {
+    "pino-pretty": "^13.0.0"
   }
 }
